[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/WeaponItem.gd" type="Script" id=1]
[ext_resource path="res://items/DropItem.tscn" type="PackedScene" id=2]

[node name="WeaponItem" type="Node2D"]
script = ExtResource( 1 )

[node name="DropItem" parent="." instance=ExtResource( 2 )]
frame = 0

[connection signal="pickup" from="DropItem" to="." method="_on_DropItem_pickup"]
